Update Brainfuck.java